[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Images/icons/settings_button.png" type="Texture" id=1]
[ext_resource path="res://Assets/Styles/ButtonNormal.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/Styles/ButtonPressed.tres" type="StyleBox" id=3]
[ext_resource path="res://Assets/Styles/ButtonHoverStyle.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/Styles/ButtonFocus.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/Fonts/MainFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/Prefubs/UIControl.gd" type="Script" id=7]
[ext_resource path="res://Assets/Prefubs/settings_panel.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Images/icons/buttons/Hex/slice36.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/icons/buttons/Hex/slice43.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/icons/buttons/Hex/slice47.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="Theme" id=6]
GridContainer/constants/hseparation = 0
GridContainer/constants/vseparation = 0
GridContainer/styles/Style = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.972549, 0.972549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="Theme" id=3]
/styles/1 = SubResource( 2 )
GridContainer/styles/1 = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0431373, 0.0392157, 0.0392157, 0.968627 )

[node name="Control" type="Control"]
anchor_right = 1.00293
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="menu_button" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -60.0
margin_top = 10.0
margin_right = 4.0
margin_bottom = 74.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -248.0
margin_right = 0.375

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1453.0
margin_top = -248.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="NinePatchRect/HBoxContainer"]
margin_right = 1453.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="build_panel" type="GridContainer" parent="NinePatchRect/HBoxContainer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -239.5
margin_top = -124.0
margin_right = 375.5
margin_bottom = 127.0
size_flags_horizontal = 15
size_flags_vertical = 3
theme = SubResource( 6 )
custom_constants/vseparation = 3
custom_constants/hseparation = 1
columns = 5

[node name="TextureButton" type="TextureButton" parent="NinePatchRect/HBoxContainer/Panel/build_panel"]
margin_right = 64.0
margin_bottom = 64.0
theme = SubResource( 3 )
texture_normal = ExtResource( 9 )

[node name="TextureButton2" type="TextureButton" parent="NinePatchRect/HBoxContainer/Panel/build_panel"]
margin_left = 65.0
margin_right = 121.0
margin_bottom = 64.0
texture_normal = ExtResource( 10 )

[node name="TextureButton3" type="TextureButton" parent="NinePatchRect/HBoxContainer/Panel/build_panel"]
margin_left = 122.0
margin_right = 186.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="NinePatchRect/HBoxContainer/Panel/build_panel"]
margin_left = 187.0
margin_right = 251.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="TextureButton5" type="TextureButton" parent="NinePatchRect/HBoxContainer/Panel/build_panel"]
margin_left = 252.0
margin_right = 316.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="TextureButton6" type="TextureButton" parent="NinePatchRect/HBoxContainer/Panel/build_panel"]
margin_top = 67.0
margin_right = 64.0
margin_bottom = 131.0
texture_normal = ExtResource( 1 )

[node name="button_back" type="TextureButton" parent="NinePatchRect/HBoxContainer/Panel/build_panel"]
margin_left = 65.0
margin_top = 67.0
margin_right = 121.0
margin_bottom = 131.0
hint_tooltip = "Back"
texture_normal = ExtResource( 11 )
__meta__ = {
"_editor_description_": ""
}

[node name="button_cancel" type="TextureButton" parent="NinePatchRect/HBoxContainer/Panel/build_panel"]
margin_left = 122.0
margin_top = 67.0
margin_right = 186.0
margin_bottom = 131.0
hint_tooltip = "Cancel"
texture_normal = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -248.0
margin_right = 457.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="NinePatchRect/VBoxContainer"]
margin_right = 457.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="settings" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="settings"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="settings/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -226.317
margin_top = -250.0
margin_right = 226.317
margin_bottom = 250.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 30
alignment = 1

[node name="resume_button" type="Button" parent="settings/Panel/VBoxContainer"]
margin_right = 452.0
margin_bottom = 102.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
text = "Прололжить"

[node name="settings_button" type="Button" parent="settings/Panel/VBoxContainer"]
margin_top = 132.0
margin_right = 452.0
margin_bottom = 235.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
text = "Настройки"

[node name="help_button" type="Button" parent="settings/Panel/VBoxContainer"]
margin_top = 265.0
margin_right = 452.0
margin_bottom = 367.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
text = "Помощь"

[node name="save_and_exit" type="Button" parent="settings/Panel/VBoxContainer"]
margin_top = 397.0
margin_right = 452.0
margin_bottom = 500.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
text = "Сохранить и выйти"

[node name="subpanel" parent="settings" instance=ExtResource( 8 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -591.0
margin_top = -280.0
margin_right = 591.0
margin_bottom = 280.0

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -212.0
margin_right = -5.62573
margin_bottom = 68.0
